<resources>
    <string name="app_name">ScheduleApp</string>

    <string name="schedule_on_off">Schedule On/Off</string>
    <string name="schedules">Schedules</string>
    <string name="schedule_add_message">Please add schedule.</string>

    <string name="schedule_error">Schedule Error</string>
    <string name="schedule_times_error_message">Start time and End time cannot be the same.Please change times, then try again.</string>
    <string name="schedule_days_error_message">You must select at least one day for this schedule.</string>

    <string name="edit_schedule_name">Edit Schedule Name</string>
    <string name="edit_name">Edit Name</string>

    <string name="button_sun">S</string>
    <string name="button_mon">M</string>
    <string name="button_tues">T</string>
    <string name="button_wed">W</string>
    <string name="button_thurs">T</string>
    <string name="button_fri">F</string>
    <string name="button_sat">S</string>

    <string name="sun_day">sun</string>
    <string name="mon_day">mon</string>
    <string name="tues_day">tue</string>
    <string name="wed_day">wed</string>
    <string name="thurs_day">thur</string>
    <string name="fri_day">fri</string>
    <string name="sat_day">sat</string>

    <string name="arrow_back">Back</string>
    <string name="arrow_next">Next</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="timeSetting">Time Settings</string>
    <!-- 수정: 뒤에 PM -->
    <string name="edittext_start">00:00PM</string>
    <string name="edittext_end">00:00PM</string>
    <string name="edittext_middle">~</string>

    <!-- 2021.10.12 이후 새로 추가 -->
    <string name="schedule_on">on</string>
    <string name="schedule_off">off</string>

    <string name="schedule_add_error">Can\'t Add Schedule</string>
    <string name="schedule_add_error_message">You have reached the maximum number of schedules allowed.</string>

    <string name="schedule_delete_title">Delete Schedule</string>
    <string name="schedule_delete_message">Delete this schedule?</string>

    <string name="done">Done</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_default_time">12:00PM</string>

    <string name="time1">12A</string>
    <string name="time2">4A</string>
    <string name="time3">8A</string>
    <string name="time4">12P</string>
    <string name="time5">4P</string>
    <string name="time6">8P</string>
    <string name="time7">12A</string>

</resources>