<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="activity"
            type="com.android.jenny.scheduleapp.ScheduleAddEditActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/title_bar_schedule_add_edit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/borderline_green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/arrow_back"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_bar_schedule_add_edit"
            app:layout_constraintBottom_toBottomOf="@+id/title_bar_schedule_add_edit"
            android:contentDescription="@string/arrow_back"
            android:onClick="@{() -> activity.onBackPressed()}"
            />

        <TextView
            android:id="@+id/textview_schedule_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:textSize="20sp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_bar_schedule_add_edit"
            app:layout_constraintBottom_toBottomOf="@id/title_bar_schedule_add_edit"
            />

        <Button
            android:id="@+id/button_save"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:text="@string/save"
            android:letterSpacing="0.05"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/title_bar_schedule_add_edit"
            android:onClick="@{() -> activity.saveForScheduleListActivity()}"
            />

        <TextView
            android:id="@+id/textview_schedule_each_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="Schedule"
            android:textColor="@color/grey_900"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar_schedule_add_edit"
            android:onClick="@{() -> activity.settingScheduleNameDialog()}"
            />

        <ImageButton
            android:id="@+id/button_schedule_use_each"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/switch_on_off_selector"
            android:background="@android:color/transparent"
            android:scaleType="fitEnd"
            app:layout_constraintBottom_toBottomOf="@+id/button_editName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textview_schedule_each_on_off"
            android:onClick="@{activity::useEachButtonClick}"
            android:contentDescription="@string/schedule_on_off" />

        <Button
            android:id="@+id/button_editName"
            android:minHeight="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="14sp"
            android:text="@string/edit_name"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:textColor="@color/green_700"
            android:gravity="left"
            app:layout_constraintTop_toBottomOf="@+id/textview_schedule_each_on_off"
            app:layout_constraintStart_toStartOf="@id/textview_schedule_each_on_off"
            android:onClick="@{() -> activity.settingScheduleNameDialog()}"
            />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_200"
            app:layout_constraintTop_toBottomOf="@+id/button_editName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey_200"
            app:layout_constraintTop_toBottomOf="@id/button_sun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/button_sun"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/button_sun"
            android:textAllCaps="false"
            android:contentDescription="@string/sun_day"
            android:backgroundTint="@null"
            android:background="@drawable/shape_circle_selector"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toStartOf="@+id/button_mon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            android:onClick="@{activity::dayBtnClick}"
            />

        <Button
            android:id="@+id/button_mon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/button_mon"
            android:textAllCaps="false"
            android:contentDescription="@string/mon_day"
            android:backgroundTint="@null"
            android:background="@drawable/shape_circle_selector"
            app:layout_constraintStart_toEndOf="@+id/button_sun"
            app:layout_constraintEnd_toStartOf="@+id/button_tues"
            app:layout_constraintTop_toTopOf="@+id/button_sun"
            android:onClick="@{activity::dayBtnClick}"
            />

        <Button
            android:id="@+id/button_tues"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/button_tues"
            android:textAllCaps="false"
            android:contentDescription="@string/tues_day"
            android:backgroundTint="@null"
            android:background="@drawable/shape_circle_selector"
            app:layout_constraintStart_toEndOf="@+id/button_mon"
            app:layout_constraintEnd_toStartOf="@+id/button_wed"
            app:layout_constraintTop_toTopOf="@+id/button_mon"
            android:onClick="@{activity::dayBtnClick}"
            />

        <Button
            android:id="@+id/button_wed"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/button_wed"
            android:textAllCaps="false"
            android:contentDescription="@string/wed_day"
            android:backgroundTint="@null"
            android:background="@drawable/shape_circle_selector"
            app:layout_constraintStart_toEndOf="@+id/button_tues"
            app:layout_constraintEnd_toStartOf="@+id/button_thurs"
            app:layout_constraintTop_toTopOf="@+id/button_tues"
            android:onClick="@{activity::dayBtnClick}"
            />

        <Button
            android:id="@+id/button_thurs"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/button_thurs"
            android:textAllCaps="false"
            android:contentDescription="@string/thurs_day"
            android:backgroundTint="@null"
            android:background="@drawable/shape_circle_selector"
            app:layout_constraintStart_toEndOf="@+id/button_wed"
            app:layout_constraintEnd_toStartOf="@+id/button_fri"
            app:layout_constraintTop_toTopOf="@+id/button_wed"
            android:onClick="@{activity::dayBtnClick}"
            />

        <Button
            android:id="@+id/button_fri"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/button_fri"
            android:textAllCaps="false"
            android:contentDescription="@string/fri_day"
            android:backgroundTint="@null"
            android:background="@drawable/shape_circle_selector"
            app:layout_constraintStart_toEndOf="@+id/button_thurs"
            app:layout_constraintEnd_toStartOf="@+id/button_sat"
            app:layout_constraintTop_toTopOf="@+id/button_thurs"
            android:onClick="@{activity::dayBtnClick}"
            />

        <Button
            android:id="@+id/button_sat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/button_sat"
            android:textAllCaps="false"
            android:contentDescription="@string/sat_day"
            android:backgroundTint="@null"
            android:background="@drawable/shape_circle_selector"
            app:layout_constraintStart_toEndOf="@+id/button_fri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_fri"
            android:onClick="@{activity::dayBtnClick}"
            />

        <TextView
            android:id="@+id/textview_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/startTime"
            android:textSize="14sp"
            android:textColor="@color/grey_900"
            app:layout_constraintTop_toBottomOf="@id/line2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textview_endTime"
            />

        <TextView
            android:id="@+id/textview_endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:padding="5dp"
            android:text="@string/endTime"
            android:textSize="14sp"
            android:textColor="@color/grey_900"
            app:layout_constraintTop_toTopOf="@id/textview_startTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textview_startTime"
            />

        <TextView
            android:id="@+id/textview_time_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="~"
            android:textSize="16sp"
            android:textColor="@color/grey_900"
            app:layout_constraintTop_toTopOf="@+id/button_startTime"
            app:layout_constraintBottom_toBottomOf="@+id/button_startTime"
            app:layout_constraintStart_toEndOf="@+id/button_startTime"
            app:layout_constraintEnd_toStartOf="@+id/button_endTime"
            />

        <Button
            android:id="@+id/button_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edittext_start"
            android:letterSpacing="0.05"
            android:textSize="14sp"
            android:focusable="false"
            android:textColor="@color/green_700"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/textview_startTime"
            app:layout_constraintStart_toStartOf="@+id/textview_startTime"
            app:layout_constraintEnd_toEndOf="@+id/textview_startTime"
            android:onClick="@{activity::selectTime}"
            />

        <Button
            android:id="@+id/button_endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:text="@string/edittext_end"
            android:textSize="14sp"
            android:textColor="@color/green_700"
            android:focusable="false"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/textview_endTime"
            app:layout_constraintStart_toStartOf="@+id/textview_endTime"
            app:layout_constraintEnd_toEndOf="@+id/textview_endTime"
            android:onClick="@{activity::selectTime}"
            />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_startTime"
            />

        <Button
            android:visibility="gone"
            android:id="@+id/button_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.05"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text= "@string/remove"
            android:textSize="14sp"
            android:textColor="@color/coral"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line3"
            android:onClick="@{()->activity.removeBtnClick()}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
